srv/python/ml/error.txt
  File "/nfs/turbo/umms-csriram/scampit/Software/egem/srv/python/ml/regression.py", line 236
    !pip install scikit-optimize
    ^
SyntaxError: invalid syntax
